exports[`(.not).toHaveRequestUriTooLongStatus > using axios > .not.toHaveRequestUriTooLongStatus > fails when response have status code 414 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveRequestUriTooLongStatus()</intensity>

Expected status code to not be 414 received:
  <red>414</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 414,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveRequestUriTooLongStatus > using axios > .toHaveRequestUriTooLongStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveRequestUriTooLongStatus()</intensity>

Expected status code to be 414 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveRequestUriTooLongStatus > using got > .not.toHaveRequestUriTooLongStatus > fails when response have status code 414 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveRequestUriTooLongStatus()</intensity>

Expected status code to not be 414 received:
  <red>414</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 414,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveRequestUriTooLongStatus > using got > .toHaveRequestUriTooLongStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveRequestUriTooLongStatus()</intensity>

Expected status code to be 414 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
